--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-type-animation": "^2.1.1"
+    "react-type-animation": "^2.1.1",
+    "react-useanimations": "^2.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
