--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-useanimations": "^2.0.8"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
