--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.7",
     "react-type-animation": "^2.1.1",
     "react-useanimations": "^2.0.8"
   },
@@ -19,6 +20,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
