--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postbuild": "cd /dist/assets && gzip *.js && gzip *.css"
   },
   "dependencies": {
     "axios": "^1.1.3",
