--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "postbuild": "cd /dist/assets && gzip *.js && gzip *.css"
+    "postbuild": "cd ./dist/assets && gzip *.js && gzip *.css"
   },
   "dependencies": {
     "axios": "^1.1.3",
