--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "postbuild": "cd ./dist/assets && gzip *.js && gzip *.css"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.1.3",
